# SOWA

./: .gitignore  LICENSE  README.md  flake.nix  run.sh
Gniazdo/: Makefile  README.md  helpers.py  main.py  requirements.txt  rtsp-simple-server.yml
Gniazdo/Camera/: Camera.py
Gniazdo/Drone/: Drone.py  GpsHandler.py
Gniazdo/Parser/: InitArgsParser.py  Parser.py
Gniazdo/Scene/: Scene.py
detection/: .gitignore  Justfile  camera.py  detector.py  main.py  pyproject.toml  shell.nix  vizualiser.py  vizualizer.py
detection_jetson/: .gitignore  Justfile  camera.py  compile_models.py  detector.py  main.py  optimization_analysis.md  pyproject.toml  setup_jetson_env.sh  test_models.py
detection_jetson/DeepStream-Yolo/: config_infer_main.txt  deepstream_app_config_main.txt  main.cpp  test.cpp
docs/: PG_WETI_DPP_wer_1_2_0.docx  PG_WETI_DTP_wer_1_3_0.docx  PG_WETI_Plakat.docx
docs/STL_FILES/: BASE_PLATE.stl  BEARING_MOUNT_BOTTOM.stl  BELT_DRIVE_BOTTOM_23MM.stl  BELT_DRIVE_BOTTOM_SMALL.stl  CAMERA_ANTENNA_MOUNT.stl  SUPPORT_BAR_CONNECTOR.stl  TOP_BEARING_MOUNT.stl  TOP_BELT_DRIVE.stl
driver/: Makefile  main.ino  makefile
middle-module/: .gitignore  CMakeLists.txt  Makefile  README.md  Serial.h  flake.nix  main  main.cpp  main.py  pyproject.toml
middle-module/lib/: CMakeLists.txt
middle-module/lib/include/: Controller.h  Helpers.h  MiddleModule.h  Serial.h
middle-module/lib/include/sowa-lib/: Controller.hpp  Serial.hpp  helpers.hpp
middle-module/lib/src/: Controller.cpp  MiddleModule.cpp  Serial.cpp  helpers.cpp
